# sesac-ml

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_iris.ipynb  01_iris_pipeline.ipynb  02_breast_cancer_pipeline.ipynb  03_naive_bayes.ipynb  04_naive_bayes_gaussian.ipynb  05_decision_tree_scratch.ipynb  06_random_forest_scratch.ipynb  07_redwine_quality.ipynb  08_gradient_boosting_scratch.ipynb  09_logistic_regression_scratch.ipynb  10_SVM.ipynb  11_neural_network.ipynb  12_wine_logistic_svm.ipynb  13_water_potability.ipynb
