[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas==3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
]
